app/app/layout-style.module.css
.container {
  width: 100vw;
  min-height: 100vh;
  display: grid;

  @media (min-width: 768px) {
    grid-template-columns: 1fr 3fr;
  }

  @media (min-width: 1024px) {
    grid-template-columns: 1fr 2fr 280px;
  }
  @media (min-width: 1200px) {
    grid-template-columns: 280px 1fr 280px;
  }
}

.sidebar,
.header,
.content,
.aside {
  padding: 0.5rem;
  background: var(--bg-content);

  @media (min-width: 768px) {
    padding: 1rem;
  }
}

.header {
  position: sticky;
  top: 0;
  z-index: 1;
}

.sidebar,
.aside {
  height: 100vh;
  position: sticky;
  top: 0;
}

.content_container {
  width: 100%;
  max-width: 100vw;

  padding-bottom: calc(var(--navbar-mobile-h) + 1rem);

  @media (min-width: 768px) {
    padding-bottom: 0;
  }
}

.sidebar {
  display: none;
  padding: 0;

  @media (min-width: 768px) {
    display: initial;
  }
}

.content {
  margin: 0 auto;
  background: transparent;

  @media (min-width: 1024px) {
    max-width: var(--max-w-content);
  }
}

.header {
  padding: 0;
}

.aside {
  display: none;
  padding-block: 0;

  @media (min-width: 1024px) {
    display: initial;
  }
}

